# Bible-iu

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  WORKSTREAM.md  alembic.ini  architecture.MD  citation-engine.MD  data-model.MD  fly.toml  notes-system.MD  privacy-policy.html  rule-guide.MD  soul.MD
backend/: .env.example  pyproject.toml  requirements.txt  sms.py
backend/agent/: orchestrator.py
backend/agent/provenance/: __init__.py  ledger.py
backend/agent/reasoning/: __init__.py  citation_engine.py  classifier.py  interfaces.py  types.py
backend/agent/rules/: __init__.py  middleware.py  types.py
backend/agent/skills/: __init__.py  deepseek_backends.py  default_backends.py  local_nli.py  ollama_backends.py  web_search.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_room_image_token.py  0003_user_avatar_image_token.py  (+16 more)
backend/api/: auth.py  auth_users.py  chat_hub.py  main.py  observability.py  push.py  rate_limit.py  reading_plan_scheduler.py  reading_plans.py  schemas.py  yjs_sync.py
backend/bible_loaders/: __init__.py  api_bible.py  esv.py  loader.py  registry.py
backend/data/: __init__.py  db.py  dump_kjv_bundle.py  extract_translation_to_folder.py  models.py  prefetch_remote_translation.py  repos.py  reseed_from_folder.py  seed_bolls_translation.py  seed_commentary.py  seed_kjv.py  seed_original_tokens.py  seed_originals.py  seed_scrollmapper_translation.py  seed_strongs_definitions.py  seed_strongs_nt.py  seed_web.py  seed_xrefs.py
backend/scripts/: scrub_legacy_personal_notes.py
(+441 files in other folders)
