[project]
name = "bible-iu-backend"
version = "0.1.0"
description = "AI Bible Study Platform — agent core, rule layer, citation engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "websockets>=12.0",
  "argon2-cffi>=23.1",
  "pycrdt>=0.10",
  "pycrdt-websocket>=0.15",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"
